--- a/circleci-node-e2e/Dockerfile
+++ b/circleci-node-e2e/Dockerfile
@@ -5,7 +5,10 @@ RUN sudo apt-get install -y \
 # aws-cli
         python3-dev \
         python3-setuptools \
-        python3-pip
+        python3-pip \
+# japanese fonts
+        fonts-ipafont-gothic \
+        fonts-ipafont-mincho
 
 RUN pip3 install awscli --upgrade --user
 
